# WeatherVane

./: CMakeLists.txt  WeatherDecoder.h  WeatherVane.ino  build.sh  secrets.h  watchBuild.sh
test/: CMakeLists.txt  TestMain.cpp  WeatherDecoderTest.h  miniunit.h
