cmake_minimum_required(VERSION 3.2)

set(CMAKE_BUILD_TYPE Debug)

set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})

project(WeatherVane)

set(WEATHER_VANE_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(WEATHER_VANE_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
set(WEATHER_VANE_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/lib)

set(WEATHER_VANE_HEADERS_DIR ${PROJECT_SOURCE_DIR})
set(WEATHER_VANE_MOCKS_DIR ${PROJECT_SOURCE_DIR}/mocks)

include_directories(${WEATHER_VANE_INSTALL_INCLUDE_DIR})
include_directories(${WEATHER_VANE_HEADERS_DIR})
include_directories(${WEATHER_VANE_MOCKS_DIR})

file(GLOB SOURCE_FILES *.c *.cpp mocks/*.cpp)

add_library(WEATHER_VANE_lib STATIC ${SOURCE_FILES})
add_subdirectory(test)

add_test (NAME all COMMAND WEATHER_VANE_tests)